--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <script type="text/javascript" src="js/menu.js"></script>
-    <script type="text/javascript" src="js/processing.min.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,7 +42,6 @@
           <!-- use captain icon for toggle menu -->
           <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
             <ul>
-              <li><a href="portfolio.html">PORTFOLIO</a></li>
               <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
               <li><a href="myself.html">ABOUT ME</a></li>
             </ul>
@@ -97,11 +95,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-at&t.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="AT&T">
+                  <a href="portfolio-at&t.html" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:100%;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:70%;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">AT&T Business Center</h2>
                     </span>
                   </a>
@@ -110,11 +108,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(0, 188, 212);" title="TourConnect">
+                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" title="TourConnect">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) no-repeat; background-position:center; background-size:20%;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) 45% 50% no-repeat; background-size:20%;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">TourConnect</h2>
                     </span>
                   </a>
@@ -123,11 +121,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
+                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.png) 50% 50% no-repeat; background-size:60%;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">HCI Medicare TV App</h2>
                     </span>
                   </a>
@@ -136,11 +134,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #79CDE2;" title="See Word Reading Project">
+                  <a href="portfolio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">See Word Reading App</h2>
                     </span>
                   </a>
@@ -149,11 +147,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#E60664;" title="SoHu Film Website Project">
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.png); background-position:center; background-size:cover;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">Sohu Film Website</h2>
                     </span>
                   </a>
@@ -162,11 +160,11 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #FFB823;" title="SoHu Cloud Engine Project">
+                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" title="SoHu Cloud Engine Project">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:contain;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:25%;"></div>
                     </span>
-                    <span>
+                    <span class="heading7">
                         <h2 class="heading2">Sohu Fans App</h2>
                     </span>
                   </a>
