--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -33,7 +33,7 @@
 		      <!-- use captain icon for toggle menu -->
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
-		          <li><a href="portfolio.html">PORTFOLIO</a></li>
+		          <li><a href="index.html">HOME</a></li>
 		          <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
 		          <li><a href="myself.html">ABOUT ME</a></li>
 		        </ul>
