--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <!-- use captain icon for toggle menu -->
           <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
             <ul>
-              <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
-              <li><a href="myself.html">ABOUT ME</a></li>
+              <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">简历</a></li>
+              <li><a href="myself.html">关于我</a></li>
             </ul>
           </div>
         </div>
@@ -95,12 +95,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-at&t.html" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
+                  <a href="at&t-cn.html" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:70%;"></div>
                     </span>
                     <span class="heading7">
-                        <h2 class="heading2">AT&T Business Center</h2>
+                        <h2 class="heading2">AT&T</h2>
                     </span>
                   </a>
               </div>
@@ -108,7 +108,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" title="TourConnect">
+                  <a href="tourconnect-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="TourConnect">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) 45% 50% no-repeat; background-size:20%;"></div>
                     </span>
@@ -121,12 +121,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
+                  <a href="hci-detail.html" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.png) 50% 50% no-repeat; background-size:60%;"></div>
                     </span>
                     <span class="heading7">
-                        <h2 class="heading2">HCI Medicare TV App</h2>
+                        <h2 class="heading2">HCI TV App</h2>
                     </span>
                   </a>
               </div>
@@ -134,7 +134,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-seewordapp.html" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
+                  <a href="seewordreading-cn.html" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
@@ -145,7 +145,7 @@
               </div>
             </section>
 
-            <section class="container_piece container_piece_1" style="height:400px;">
+           <!-- <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
                   <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
@@ -169,7 +169,7 @@
                     </span>
                   </a>
               </div>
-            </section>
+            </section> -->
 
 	    </div>
 
