--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="at&t-cn.html" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
+                  <a href="at&t-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:70%;"></div>
                     </span>
@@ -121,7 +121,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="hci-detail.html" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
+                  <a href="hci-detail.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.png) 50% 50% no-repeat; background-size:60%;"></div>
                     </span>
@@ -134,7 +134,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="seewordreading-cn.html" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
+                  <a href="seewordreading-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
