--- a/hci-cn.html
+++ b/hci-cn.html
@@ -37,64 +37,92 @@
                     </div>
                     <div class="context_p_box hci_context_p_box">
                         <h1>设计目标</h1>
-                        <p>· 减少用户学习的成本，提高产品的可用性。</p>
-                        <p>· 增加数据可视化功能</p>
+                        <p>· 满足患者的需求，为用户设计出更好的体验。</p>
+                        <p>· 创建设计库，以高效的交付方式，提高设计与开发的效率。</p>
                     </div>
                 </div>
 
                 <div class="context_p" style="background:#fafafa;">
                     <span style="display:block;text-align:center;font-weight:600;font-size:1.25rem;">设计过程</span>
                     <div class="context_p_box hci_context_p_box">
-                        <h1>了解产品与需求，发现问题</h1>
-                        <b>全方位的了解产品</b>
-                        <p>1. 与利益相关者进行有效的沟通，了解产品的结构，信息，目标用户，产品发展方向等等。</p>
-                        <p>2. 使用用户访谈，用户日记和观察等用户研究方法，了解用户的需求，收集用户的建议和反馈等等。</p>
-                        <p>3. 自己使用产品，并记录使用后的感想与反馈。</p>
-                        <div class="swr_img swr_img_1"></div>
-                        <b>不同的角度，不同的需求</b>
-                        <p>1. 从利益相关者的角度：希望能够改善目前的用户体验，减少用户培训的需求，并加入查看数据功能。</p>
-                        <p>2. 从用户的角度：快速设置课程内容，查看学生课程结果。并且希望学习使用的成本不要太高。</p>
-                        <p>2. 从设计师的角度：结合利益相关者与用户的需求，提出设计方案，同时满足两者的需求。</p>
-                        <b>发现问题</b>
-                        <p>1. 产品层级不清晰导致用户的学习成本较高。<br>2. 现有产品的信息可读性较低。 <br>3. 由于界面设计缺陷，会误导用户的操作。<br>4. 加入数据可视化功能。</p>
-                        <div class="swr_img swr_img_2"></div>
+                        <h1>设计思维</h1>
+                        <b>不同视角，不同思考</b>
+                        <p>HCI TV App已经使用了几年，但根据非正式的用户反馈，用户对产品的体验并不满意。HCI TV App重新设计采用了设计师和用户的两个视角来重新定义并设计。首先，设计师专注于产品功能和产品特性，然后设计师从用户的角度来改善用户在重新设计过程中的体验和满意度。</p>
+                        <div class="hci_img hci_img_1"></div>
                     </div>
                 </div>
 
                 <div class="context_p">
                     <div class="context_p_box hci_context_p_box">
-                        <h1>重新构建产品</h1>
-                        <b>信息梳理与重构</b>
-                        <p>由于原有的设计是每个课程有独立的App，但是这样极大的降低了教师的工作效率，所以我们需要整合4个课程App。首先，我们必须梳理信息，创建新的App信息架构。通过不断的与利益相关者和用户交流，了解各方的需求，并经过多次的修改最终得出早期的App信息架构。这早期的信息架构对我们可以创建并满足客户需求，提高体验质量产生了重大影响。</p>
-                        <div class="swr_img swr_img_3"></div>
-                        <b>漫长的迭代</b>
-                        <p>我们花费了7个月的时间，根据整理的信息与结论，不断的创造并改进新的概念，并邀请用户参与设计过程，共有6个用户测试了4个概念，进行了3轮迭代，得出了最终的设计概念。</p>
-                        <div class="swr_img swr_img_5"></div>
-                        <b>关注细节</b>
-                        <p>细节是关键。与不同的团队成员探讨想法，不断摸索和雕琢产品的细节。以下是产品设计细节的见解：</p>
-                        <div class="swr_img swr_img_4"></div>
+                        <h1>定义问题</h1>
+                        <p>由于我们的用户都是年纪较大的老人，而且都是医院的病患。这些客观因素导致了我们很难定义产品具体的问题，因为他们在给我们反馈的时候很难说清楚具体的问题是什么。</p>
+                        <b>实地采访</b>
+                        <p>为了帮助我们定义产品的问题，我们实地采访了5位用户，并邀请他们参加实地的用户测试，观察他们如何使用HCI TV App以及他们在使用过程中遇到的问题，帮助我们发现问题。</p>
+                        <div class="hci_img hci_img_3"></div>
+                        <b>用户测试</b>
+                        <p>我们为被测试者设置了两个不同难度的任务，观察和记录他们的操作与耗时，并让他们给产品打分。</p>
+                        <div class="hci_img hci_img_4"></div>
+                        <b>测试数据</b>
+                        <p>数据显示了用户完成任务所花费的点击次数，时间，满意度。</p>
+                        <div class="hci_img hci_img_5"></div>
+                        <b>总结问题</b>
+                        <p>通过测试，我们发现问题集中在反射环境光，颜色对比度，信息布局，操作连续性，字体大小和重量，提醒信息等方面。我们将问题分为三类：环境问题，界面问题和交互问题。</p>
+                        <div class="hci_img hci_img_6"></div>
+                        <b>进一步思考</b>
+                        <p>我们的用户是60岁及以上的患有慢性疾病和一系列身体疾病的患者。他们的视力退化，许多人有老花眼。同时，对于老年人来说，“色觉”也随着年龄的增长而降低，因此难以区分相似的颜色。此外，许多老年人的灵活性和协调性随着年龄的增长而受到影响。在心理上，焦虑，烦躁和缺乏兴趣是老年人的常见问题。这些属性将影响老年人使用与HCI TV App交互的遥控器。复杂的操作对于老年用户，并不是很好的互动方法。我们应该更多地考虑如何为用户设计友好和舒适的体验。并且，医院的实际环境是影响使用的因素之一。</p>
                     </div>
                 </div>
 
                 <div class="context_p" style="background:#fafafa;">
                     <div class="context_p_box hci_context_p_box">
-                        <h1>全新的设计</h1>
-                        <b>新的设计语言</b>
-                        <p>统一项目的UI设计，屏蔽不必要的设计差异，解放设计，降低开发成本。</p>
-                        <div class="swr_img swr_img_7"></div>
-                        <b>新的UI设计</b>
-                        <p>1. 统一的界面设计能帮助用户快速熟悉并掌握使用方法。<br>2. 清晰的信息层级和页面结构帮助用户快速的找到他们所需要的信息。 <br>3.用颜色和字体等，帮助用户区分信息的优先级。<br>4. 以“不要让用户去想”为设计思想，让操作过程更顺畅自然。</p>
-                        <div class="swr_img swr_img_9"></div>
-                        <b>新的高保真线框图</b>
-                        <p>高保真线框图提供了更准确直观的产品交互与流程，更快的获取团队与用户的反馈，快速的迭代升级。</p>
-                        <div class="swr_img swr_img_8"></div>
+                        <h1>快速迭代</h1>
+                        <p>一些显而易见的问题可以由设计师快速解决。设计人员擅长设计清晰的界面，可读信息和可访问的功能，帮助用户获得比以前更好的体验。通过快速的重新设计，我们设计了四个不同的产品原型，这些原型都具有更好的信息层次结构，更清晰，更可读地显示信息。并且，我们与程序员紧密合作，试图减少操作步骤，使动画更流畅。</p>
+                        <div class="hci_img hci_img_7"></div>
                     </div>
                 </div>
 
-                <div class="context_p" style="margin-bottom:5%;">
+                <div class="context_p">
+                    <div class="context_p_box hci_context_p_box">
+                        <h1>精炼</h1>
+                        <b>我们真的知道用户想要什么吗？</b>
+                        <p>用户不会阅读信息，他们会对看到的信息进行扫描。大多数设计师设计信息内容以具有清晰的视觉结构，以使信息可读。 设计师的目标是布置清晰的内容层次结构，而不必过多关注美丽的装饰，这是设计信息内容的好方法。<br> 然而，设计师可能会忽略一个问题，即用户真正想要阅读的信息是什么？例如，观众想要从在线资源观看电影。 如果信息层次不清楚，则用户可能难以进行选择。如果用户对从标题中获取的信息不感兴趣，或者视频需要花费很长时间，则用户将不会阅读详细信息（一部分用户如果知道视频需要很长时间就会放弃观看视频时间）。</p>
+                        <div class="hci_img hci_img_8"></div>
+                        <b>颜色也是忌讳</b>
+                        <p>由于部分老人在医院时心理较敏感，似乎某些特定元素（颜色，符号，文本）会给他们带来心理负担。有一位被测试者问道：“你能把红色变成另一种颜色吗？ 我喜欢红色，但很难说这种感觉，当我在医院看到红色时我感觉不舒服。” 我们将红色定义为警告和不正确的信息，但是随后我们更改成了橙色，橙色可以在显示信息时，起到相同的作用，同时橙色对患者更友好。</p>
+                        <div class="hci_img hci_img_9"></div>
+                        <b>功能优化</b>
+                        <p>为了帮助用户更好的学习。我们设计了一种友好的交互方式来帮助用户解释教育信息。</p>
+                        <div class="hci_img hci_img_10"></div>
+                        <b>定义icon</b>
+                        <p>5个被测试用户，在没有提示的情况下，分辨出了原型中icon的含义。换句话说，我们使用的icon清晰易懂。</p>
+                        <div class="hci_img hci_img_11"></div>
+                        <b>交互方式</b>
+                        <p>用户没有像我们预期的那样操作我们的产品，是因为我们的产品交互方式不同于一般电视的交互方式。所以，我们更改了交互方式，使用用户熟悉的交互方式，并减少操作步骤。</p>
+                        <div class="hci_img hci_img_12"></div>
+                    </div>
+                </div>
+
+                <div class="context_p" style="background:#fafafa;">
+                    <div class="context_p_box hci_context_p_box">
+                        <h1>再次测试</h1>
+                        <p>我们的程序员帮助我们构建了用于测试的新产品界面。我们邀请了五位用户，验证新的产品界面是否有效。对比前后两次测试结果，新的产品界面极大的提高了用户满意度，并显著的减少了用户操作时间。</p>
+                        <div class="hci_img hci_img_13"></div>
+                    </div>
+                </div>
+
+                <div class="context_p">
+                    <div class="context_p_box hci_context_p_box">
+                        <h1>最终的设计</h1>
+                        <p>我们创建了全新的设计库，提高设计与开发的效率。</p>
+                        <div class="hci_img hci_img_14"></div>
+                    </div>
+                </div>
+
+
+                <div class="context_p" style="margin-bottom:5%; background:#fafafa;">
                     <div class="context_p_box hci_context_p_box">
                     <span style="display:block;text-align:center;font-weight:600;font-size:1.25rem;">下一步的工作</span>
-                        <p>1. 根据新的产品需求，增加新的功能。</p>
+                        <p>1. 进一步优化设计细节。</p>
                         <p>2. 定时收集用户反馈，并根据用户反馈，进行合理的设计改动。</p>
                     </div>
                 </div>
