--- a/at&t-cn.html
+++ b/at&t-cn.html
@@ -38,10 +38,26 @@
                         <p>2. 我创建了框架和原型来分享设计概念。这有助于推动决策的制定。</p>
                         <p>3. 在整个项目周期中，我设计，并向高管和利益相关者展示了整个项目，以获得了更多的团队支持。</p>
                     </div>
+                    <div class="context_p_box att_context_p_box">
+                        <h1>成果</h1>
+                        <p>创造了全新的在线购买模式和流程，并将其模板化。在未来，只需将新项目应用到模板中，即可使用。</p>
+                    </div>
+                </div>
+
+                <div class="context_p" style="background:#fafafa;">
+                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T B2B</span>
+                    <div class="context_p_box att_context_p_box">
+                         <h1>项目介绍</h1>
+                         <p>AT&T针对不同的企业类型，会提供了四个不同的信息管理平台。我主要负责为AT＆T B2B 多个信息管理平台，设计支付和订单相关的功能和项目</p>
+                    </div>
+                    <div class="context_p_box att_context_p_box">
+                        <h1>我的任务与角色</h1>
+                        <p>我领导并设计了数十个关于Business Center和Premier的产品项目。与商业团队，内容策略团队，开发团队等深度合作。根据不同的业务需求、客户的需求，遵照AT&T产品设计准则，快速输出解决方案。</p>
+                    </div>
                 </div>
 
 
-                <div class="context_p" style="background:#fafafa;">
+                <div class="context_p">
                     <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T CHATBOT</span>
                     <div class="context_p_box att_context_p_box">
                          <h1>项目介绍</h1>
@@ -53,17 +69,6 @@
                     </div>
                 </div>
 
-                <div class="context_p">
-                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T B2B</span>
-                    <div class="context_p_box att_context_p_box">
-                         <h1>项目介绍</h1>
-                         <p>AT&T针对不同的企业，会提供不同的服务平台。AT&T有4大B2B平台，我主要负责设计Business Center和Premier这两个平台的订购与支付。</p>
-                    </div>
-                    <div class="context_p_box att_context_p_box">
-                        <h1>我的任务与角色</h1>
-                        <p>我领导了数十个关于Business Center和Premier的设计项目。与研究员，产品经理，内容策略师，开发还有商业等团队深度合作。根据不同的业务需求，不同的客户的需求，遵照AT&T设计准则，快速设计出解决方案。</p>
-                    </div>
-                </div>
 
 
 
