--- a/tourconnect-cn.html
+++ b/tourconnect-cn.html
@@ -28,7 +28,7 @@
                     <span style="display:block;text-align:center;font-weight:600;font-size:1.25rem;">项目简介</span>
                     <div class="context_p_box tc_context_p_box">
                         <h1>背景</h1>
-                         <p>TourConnect作为<em style="font-weight:900;">B2B</em>旅游业的在线全球社区，主要提供以下两项服务。（1）TourConnect帮助旅游业公司寻找新的业务合作伙伴。（2）TourConnect创造了电子合同工具来帮助旅游业公司建立和管理电子合同。我是TourConnect唯一的设计师。我的工作包括新功能开发和对现有产品进行快速迭代，给用户提供更好的体验。我专注于简化产品流程和设计可行的解决方案，我负责的工作包括用户研究，数据分析，用户流程，高保真线框图设计，用户界面设计和可用性测试。</p>
+                         <p>TourConnect作为<em style="font-weight:900;">B2B</em>旅游业的商业社区，主要提供以下两项服务：<br>1）TourConnect帮助旅游业公司寻找新的业务合作伙伴。<br>2）TourConnect创造了电子合同工具来帮助旅游业公司建立和管理电子合同。<br><br>我的工作包括根据行业需求，设计新功能，并且对现有产品进行快速迭代，为用户提供更好的体验。我专注于简化产品流程和设计可行的解决方案，我负责的工作包括用户研究、产品分析、数据分析、产品设计和可用性测试。</p>
 		    	    </div>
                     <div class="context_p_box tc_context_p_box">
                         <h1>成果</h1>
@@ -43,9 +43,8 @@
                     </div>
                     <div class="context_p_box tc_context_p_box">
                         <h1>设计挑战</h1>
-                        <p>· 如何快速理解TourConnect的产品</p>
+                        <p>· 如何深⼊了解目标⽤户、产品和行业需求，并提出可行的行业解决方案</p>
                         <p>· 如何集成商业需求与用户需求</p>
-                        <p>· 如何快速的定义用户的真正痛点，并迅速提供解决方案</p>
                     </div>
                 </div>
 
