--- a/at&t-cn.html
+++ b/at&t-cn.html
@@ -26,46 +26,46 @@
 		    	<div class="tc_context_title att_context_title_1"></div>
 
                 <div class="context_p">
-                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T ONLINE BUY</span>
+                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">项目一：AT&T在线购买服务</span>
                     <div class="context_p_box att_context_p_box">
                         <h1>项目介绍</h1>
-                        <p>AT&T的B2B业务一直是由业务部门负责，而online buy是一次全新的尝试，客户可以根据自己的需求，直接在线购买AT&T服务，抹去了繁琐的步奏，节省了大量的时间。ADI在线购买服务在上线的第一个月，就为AT&T Business部门带来了一百万美元的营收。</p>
+                        <p>随着AT&T的网络服务的快速发展，AT&T的客户群体被划分越来越细致。现有的大客户销售方法对中小企业并不适用，所以公司高层制定了针对中小企业，开拓在线购买网络服务的业务线。在线购买服务不仅会打破原有的销售流程，并且考虑到在线购买网络服务的复杂性较高，项目整体难度较大。通过跨部门沟通，与销售、客服、市场、开发等团队紧密合作，让在线购买服务成功上线。</p>
                     </div>
                     <div class="context_p_box att_context_p_box">
-                        <h1>我的任务与角色</h1>
-                        <p>看似简单的设计方案，其实并不简单。1个月的时间，3个部门，6个team共同努力，打造出了全新的AT&T购买体验。</p>
-                        <p>1. 我与项目经理和另一位首席设计师合作，将商业需求和概念转化为解决方案。</p>
-                        <p>2. 我创建了框架和原型来分享设计概念。这有助于推动决策的制定。</p>
-                        <p>3. 在整个项目周期中，我设计，并向高管和利益相关者展示了整个项目，以获得了更多的团队支持。</p>
+                        <h1>我的角色</h1>
+                        <p>· 通过与各部门密切沟通，深入了解公司现有购买流程以及团队在流程中的职能，帮助团队全面了解现有流程，提高沟通效率。</p>
+                        <p>· 与多部门沟通、协商后，创建在线购买流程框架和产品原型，使用敏捷管理方法，快速推进框架和产品原型的迭代。</p>
+                        <p>· 在整个项目周期中，我定期向高管和利益相关者展示项目进度，帮助推动决策的制定。</p>
                     </div>
                     <div class="context_p_box att_context_p_box">
                         <h1>成果</h1>
-                        <p>创造了全新的在线购买模式和流程，并将其模板化。在未来，只需将新项目应用到模板中，即可使用。</p>
+                        <p>1. 首个在线购买服务AT&T Dedicated Internet在上线的第一个月，就为AT&T带来了近一百万美元的营收</p>
+                        <p>2. 总结并归纳AT&T Dedicated Internet的在线购买服务，并成功将其模板化。在未来，只需将新项目应用到模板中，即可使用，有效的帮助企业提高效率。</p>
                     </div>
                 </div>
 
                 <div class="context_p" style="background:#fafafa;">
-                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T B2B</span>
+                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">项目二：AT&T B2B管理平台</span>
                     <div class="context_p_box att_context_p_box">
                          <h1>项目介绍</h1>
-                         <p>AT&T针对不同的企业类型，会提供了四个不同的信息管理平台。我主要负责为AT＆T B2B 多个信息管理平台，设计支付和订单相关的功能和项目</p>
+                         <p>AT&T是全美最大的网络服务商，拥有上千种大小不同的网络服务，针对不同的州、企业类型、企业大小，提供了四个不同的B端网络服务管理平台。企业根据自身需要，在这四个平台上进行企业网络服务的申请、购买、管理和支付。</p>
                     </div>
                     <div class="context_p_box att_context_p_box">
-                        <h1>我的任务与角色</h1>
-                        <p>我领导并设计了数十个关于Business Center和Premier的产品项目。与商业团队，内容策略团队，开发团队等深度合作。根据不同的业务需求、客户的需求，遵照AT&T产品设计准则，快速输出解决方案。</p>
+                        <h1>我的角色</h1>
+                        <p>· 负责AT＆T Business Center 和 Premier 两个B端管理平台的项目设计与管理，成功交付了数十个与支付管理和订单管理相关的项目，帮助商业团队不断完善B端管理平台。</p>
                     </div>
                 </div>
 
 
                 <div class="context_p">
-                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">AT&T CHATBOT</span>
+                    <span style="display:block;text-align:center;font-weight:800;font-size:1.5rem;">项目三：AT&T CHATBOT</span>
                     <div class="context_p_box att_context_p_box">
                          <h1>项目介绍</h1>
-                         <p>AT&T有着数千万的用户，在线客户服务一直是帮助用户解决问题的主要途径之一。但是由于用户基数太大，AT&T一直希望通过AI chatbot技术来缓解与日俱增的客服压力。</p>
+                         <p>AT&T拥有数千万的用户，但是千万级的用户量不断考验着客服的工作效率。AT&T在线客户服务是帮助用户解决问题的主要途径之一，但是由于用户基数太大，AT&T一直希望通过聊天机器人技术，解决部分初级问题，缓解与日俱增的客服压力。</p>
                     </div>
                     <div class="context_p_box att_context_p_box">
-                        <h1>我的任务与角色</h1>
-                        <p>我作为用户体验设计师参与到项目中。与设计，算法，内容策略等团队协作。根据新的服务需求，与用户的反馈数据，调整了chatbot的decision tree.</p>
+                        <h1>我的角色</h1>
+                        <p>· 作为用户体验设计师参与到项目中。与设计，客服，内容策略等团队协作。收集商业需求、客服数据和用户数据，快速更新聊天机器人的decision tree，有效的帮助客户缓解了工作压力。</p>
                     </div>
                 </div>
 
