--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="works_category_tiles"> 
                   <a href="at&t-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="AT&T">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:70%;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) 50% 50% no-repeat; background-color:#9856a9; background-size:70%;"></div>
                     </span>
                     <span class="heading7">
                         <h2 class="heading2">AT&T</h2>
@@ -110,7 +110,7 @@
               <div class="works_category_tiles"> 
                   <a href="tourconnect-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="TourConnect">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) 45% 50% no-repeat; background-size:20%;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.png) 50% 50% no-repeat; background-size:100%; background-color:#52b3d3;"></div>
                     </span>
                     <span class="heading7">
                         <h2 class="heading2">TourConnect</h2>
@@ -121,12 +121,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="hci-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="Health Care Information TV APP Project">
+                  <a href="hci-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_1" title="HealthCare TV APP">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.png) 50% 50% no-repeat; background-size:60%;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.png) 50% 50% no-repeat; background-size:75%; background-color:#efbe0e;"></div>
                     </span>
                     <span class="heading7">
-                        <h2 class="heading2">HCI TV App</h2>
+                        <h2 class="heading2">HealthCare TV App</h2>
                     </span>
                   </a>
               </div>
@@ -134,12 +134,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="seewordreading-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_2" title="See Word Reading Project">
+                  <a href="seewordreading-cn.html" target="view_window" class="works_category_tiles_item works_category_tiles_item2_2" title="SeeWordReading教师管理App">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png) 50% 100% no-repeat; background-size:85%; background-color:#d81534;"></div>
                     </span>
                     <span class="heading7">
-                        <h2 class="heading2">See Word Reading App</h2>
+                        <h2 class="heading2">SeeWordReading App</h2>
                     </span>
                   </a>
               </div>
